[gd_scene load_steps=26 format=3 uid="uid://jxq0tqjk3anq"]

[ext_resource type="Script" path="res://Scripts/bee_character.gd" id="1_w76f5"]
[ext_resource type="Texture2D" uid="uid://dokb1ku6oidl3" path="res://icon.svg" id="2_5mbkc"]
[ext_resource type="Script" path="res://Scripts/bee_cam.gd" id="3_8l30g"]
[ext_resource type="Texture2D" uid="uid://ng3agfk2opgd" path="res://Assets/temp/temp_pollen_bg.png" id="4_nibth"]
[ext_resource type="PackedScene" uid="uid://ddn4r2cx0d5tp" path="res://Scenes/shadow_component.tscn" id="4_y8xwk"]
[ext_resource type="Texture2D" uid="uid://dvgbcyx3slhhr" path="res://Assets/temp/temp_pollen_front.png" id="5_7hu6r"]
[ext_resource type="Texture2D" uid="uid://dstr8323ogqpf" path="res://Assets/temp/temp_pollen_fill.png" id="6_2qol0"]
[ext_resource type="Texture2D" uid="uid://cyqfsco4u2u61" path="res://Assets/temp/temp_progress_bg.png" id="7_fuoxu"]
[ext_resource type="Texture2D" uid="uid://ck2jkgqvtx3r7" path="res://Assets/temp/temp_progress_front.png" id="8_xkegg"]
[ext_resource type="Texture2D" uid="uid://djp7k7srfsdw3" path="res://Assets/temp/temp_progress_fill.png" id="9_lhkvy"]
[ext_resource type="PackedScene" uid="uid://cmvbwovybfgmc" path="res://Scenes/state_machine.tscn" id="10_ihhyr"]
[ext_resource type="Script" path="res://Scripts/bee_states/bee_grounded.gd" id="11_rhqi7"]
[ext_resource type="Script" path="res://Scripts/bee_states/bee_flying.gd" id="12_i2suy"]
[ext_resource type="Script" path="res://Scripts/bee_states/bee_slamming.gd" id="13_4omoj"]
[ext_resource type="Script" path="res://Scripts/bee_states/bee_dashing.gd" id="14_252b0"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1d5xi"]
radius = 1.0

[sub_resource type="SphereShape3D" id="SphereShape3D_xr7x2"]
radius = 0.65

[sub_resource type="Animation" id="Animation_tjvyh"]
length = 0.001

[sub_resource type="Animation" id="Animation_m2xhm"]
resource_name = "dash_left"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:bee_air_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [3.0, 3.0, 0.75]
}

[sub_resource type="Animation" id="Animation_rm0ea"]
resource_name = "dash_right"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:bee_air_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [-3.0, -3.0, -0.75]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kxgqy"]
_data = {
"RESET": SubResource("Animation_tjvyh"),
"dash_left": SubResource("Animation_m2xhm"),
"dash_right": SubResource("Animation_rm0ea")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_niisi"]
noise_type = 3
seed = 1
frequency = 0.003
fractal_gain = 0.75

[sub_resource type="FastNoiseLite" id="FastNoiseLite_eq1kq"]
noise_type = 3
seed = 1
frequency = 0.003

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jkel7"]
size = Vector2(720, 426)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8tnka"]
height = 1.0
radius = 0.25

[node name="beeCharacter" type="CharacterBody3D"]
collision_layer = 0
script = ExtResource("1_w76f5")
bee_air_speed = 3.0

[node name="beeSprite" type="Sprite3D" parent="."]
billboard = 1
texture = ExtResource("2_5mbkc")

[node name="beeCollision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_1d5xi")

[node name="beeHurtbox" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="beeHurtboxArea" type="CollisionShape3D" parent="beeHurtbox"]
shape = SubResource("SphereShape3D_xr7x2")

[node name="beeAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kxgqy")
}

[node name="beeCamArm" type="Node3D" parent="."]

[node name="beeCam" type="Camera3D" parent="beeCamArm"]
keep_aspect = 0
current = true
near = 0.01
script = ExtResource("3_8l30g")
rot_noise = SubResource("FastNoiseLite_niisi")
trans_noise = SubResource("FastNoiseLite_eq1kq")

[node name="beeUI" type="CanvasLayer" parent="."]

[node name="beeUIMargin" type="MarginContainer" parent="beeUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="UIBars" type="HBoxContainer" parent="beeUI/beeUIMargin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = -30

[node name="pollenBar" type="TextureProgressBar" parent="beeUI/beeUIMargin/UIBars"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 30.0
fill_mode = 3
texture_under = ExtResource("4_nibth")
texture_over = ExtResource("5_7hu6r")
texture_progress = ExtResource("6_2qol0")

[node name="progressBar" type="TextureProgressBar" parent="beeUI/beeUIMargin/UIBars"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
step = 0.1
value = 30.0
texture_under = ExtResource("7_fuoxu")
texture_over = ExtResource("8_xkegg")
texture_progress = ExtResource("9_lhkvy")
texture_progress_offset = Vector2(4, 4)

[node name="fpsLabel" type="Label" parent="beeUI/beeUIMargin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0.764706, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 52
text = "FPS:"

[node name="mobileButtons" type="Control" parent="beeUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="leftInput" type="TouchScreenButton" parent="beeUI/mobileButtons"]
position = Vector2(0, 854)
shape = SubResource("RectangleShape2D_jkel7")
action = "left"

[node name="flyInput" type="TouchScreenButton" parent="beeUI/mobileButtons"]
position = Vector2(0, 854)
shape = SubResource("RectangleShape2D_jkel7")
action = "fly"

[node name="rightInput" type="TouchScreenButton" parent="beeUI/mobileButtons"]
position = Vector2(0, 854)
shape = SubResource("RectangleShape2D_jkel7")
action = "right"

[node name="stateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("10_ihhyr")]
initial_state = NodePath("beeGrounded")

[node name="beeGrounded" type="Node" parent="stateMachine"]
script = ExtResource("11_rhqi7")

[node name="beeFlying" type="Node" parent="stateMachine"]
script = ExtResource("12_i2suy")

[node name="beeSlamming" type="Node" parent="stateMachine"]
script = ExtResource("13_4omoj")

[node name="beeDashing" type="Node" parent="stateMachine"]
script = ExtResource("14_252b0")

[node name="shadowComponent" parent="." instance=ExtResource("4_y8xwk")]
max_shadow_radius = 1.0
casting_shadow = false
scale_size = true

[node name="beeStinger" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 8
monitorable = false

[node name="beeStingerCol" type="CollisionShape3D" parent="beeStinger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("CylinderShape3D_8tnka")

[connection signal="area_entered" from="beeHurtbox" to="." method="_on_bee_hurtbox_area_entered"]
[connection signal="animation_finished" from="beeAnim" to="stateMachine/beeDashing" method="_on_bee_anim_animation_finished"]
